added link to image search

--- a/Project 0/index.html
+++ b/Project 0/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
 
+<!-- Nav bar -->
   <header>
   <ul class="header-nav">
     <li><a href="https://www.gmail.com" class="nav-link">Gmail</a></li>
-    <li><a href="" class="nav-link">Images</a></li>
+    <li><a href="/image_search.html" class="nav-link">Images</a></li>
     <li><a href="https://cs50.harvard.edu/web/2020/" class="nav-link">CS50web</a></li>
   </ul>
 </header>
