finished adding pages

--- a/Project 0/index.html
+++ b/Project 0/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <title>Google Search | CS50 Edition</title>
   </head>
   <body>
@@ -12,21 +13,21 @@
 <!-- Nav bar -->
   <header>
   <ul class="header-nav">
-    <li><a href="https://www.gmail.com" class="nav-link">Gmail</a></li>
+    <li><a href="/index.html" class="nav-link">Search</a></li>
     <li><a href="/image_search.html" class="nav-link">Images</a></li>
-    <li><a href="https://cs50.harvard.edu/web/2020/" class="nav-link">CS50web</a></li>
+    <li><a href="/advanced search.html" class="nav-link">Advanced</a></li>
   </ul>
 </header>
 
 
 <main>
   <div class="main-logo"><img src="/img/logo.png" alt=""></img></div>
-  <form action="https://www.google.com/search">
+  <form action="https://www.google.com/search" method="GET">
     <input class="search-bar" type="text" name="q" placeholder="Type Something..">
 
     <div class="btn-container">
-      <button type="submit" class="btn btn-search">Google Search</button>
-      <button class="btn btn-search">I'm Feeling NIET</button>
+      <button type="submit" class="btn btn-search" name="btnK">Google Search</button>
+      <button class="btn btn-search" name="btnI">I'm Feeling Lucky</button>
     </div>
   </form>
   <div class="quote">See how Google is helping Indians grow with Career Certificates</div>
@@ -34,28 +35,7 @@
 
 
 <footer>
-  <div class="column">
-    <div class="footer-text">India</div>
-  </div>
-  <div class="column">
-  
-        <ul>
-          <li><a href="" class="footer-link">About</a></li>
-          <li><a href="" class="footer-link">Advertising</a></li>
-          <li><a href="" class="footer-link">Business</a></li>
-          <li><a href="" class="footer-link">How Search Works</a></li>
-        </ul>
-
-    
-        <ul>
-          <li><a href="" class="footer-link">Privacy</a></li>
-          <li><a href="" class="footer-link">Terms</a></li>
-          <li><a href="" class="footer-link">Settings</a></li>
-        </ul>
-  
-  </div>
-
- 
+  <div class="footer-text">This is Project 0.</div>
 </footer>
 </header>
 
